{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 174,
  "lineage": "69a5cd4c-fddc-f686-18f9-b4470c860eb4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541770108352:route-table/rtb-0018bcf9ebccbaf7d",
            "default_route_table_id": "rtb-0018bcf9ebccbaf7d",
            "id": "rtb-0018bcf9ebccbaf7d",
            "owner_id": "541770108352",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c293109882fba51",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "default route table sandbox-cassandra-plain for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "default route table sandbox-cassandra-plain for cassandra-plain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0846ea759e67ed8f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f6382b19c796885",
            "domain": "vpc",
            "id": "eipalloc-08f6382b19c796885",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-194-59-42.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.194.59.42",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "eip sandbox-cassandra-plain for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "eip sandbox-cassandra-plain for cassandra-plain"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_route_table.route_table",
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09439f09c55136ecf",
            "arn": "arn:aws:ec2:eu-central-1:541770108352:instance/i-0111c3e9875428d52",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile",
            "id": "i-0111c3e9875428d52",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "user-personal-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e347851ec8f3f752",
            "private_dns": "ip-10-0-2-149.eu-central-1.compute.internal",
            "private_ip": "10.0.2.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 1500,
                "throughput": 0,
                "volume_id": "vol-03bfef22dbd22e670",
                "volume_size": 500,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096986f185e231c72",
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "cassandra_1a sandbox-cassandra-plain for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "cassandra_1a sandbox-cassandra-plain for cassandra-plain"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba4a25d64ad97a94"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.test_profile",
            "aws_iam_role.test_role",
            "aws_security_group.allow_web_ssh",
            "aws_subnet.priv_subnet",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09439f09c55136ecf",
            "arn": "arn:aws:ec2:eu-central-1:541770108352:instance/i-0f138a8baee3e68f3",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile",
            "id": "i-0f138a8baee3e68f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "user-personal-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c537150135112939",
            "private_dns": "ip-10-0-2-142.eu-central-1.compute.internal",
            "private_ip": "10.0.2.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 1500,
                "throughput": 0,
                "volume_id": "vol-060a2060e39950e67",
                "volume_size": 500,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096986f185e231c72",
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "cassandra_1b sandbox-cassandra-plain for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "cassandra_1b sandbox-cassandra-plain for cassandra-plain"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba4a25d64ad97a94"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.test_profile",
            "aws_iam_role.test_role",
            "aws_security_group.allow_web_ssh",
            "aws_subnet.priv_subnet",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cassandra_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09439f09c55136ecf",
            "arn": "arn:aws:ec2:eu-central-1:541770108352:instance/i-0f824d1c441a0320a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile",
            "id": "i-0f824d1c441a0320a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "user-personal-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-055e358d33bcfae5b",
            "private_dns": "ip-10-0-2-50.eu-central-1.compute.internal",
            "private_ip": "10.0.2.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 1500,
                "throughput": 0,
                "volume_id": "vol-03d6545186ce16aff",
                "volume_size": 500,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096986f185e231c72",
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "cassandra_1b sandbox-cassandra-plain for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "cassandra_1b sandbox-cassandra-plain for cassandra-plain"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba4a25d64ad97a94"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.test_profile",
            "aws_iam_role.test_role",
            "aws_security_group.allow_web_ssh",
            "aws_subnet.priv_subnet",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jumpbox",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09439f09c55136ecf",
            "arn": "arn:aws:ec2:eu-central-1:541770108352:instance/i-02ae50ba82a26bc9e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ae50ba82a26bc9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "user-personal-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c6276d20f37e7dc8",
            "private_dns": "ip-10-0-1-37.eu-central-1.compute.internal",
            "private_ip": "10.0.1.37",
            "public_ip": "18.159.35.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a2afc7f36b033bb2",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c2e97328cf930f8",
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "jumpbox sandbox-cassandra-plain for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "jumpbox sandbox-cassandra-plain for cassandra-plain"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02eed52c5602eeaad"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541770108352:internet-gateway/igw-02c293109882fba51",
            "id": "igw-02c293109882fba51",
            "owner_id": "541770108352",
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "igw sandbox-cassandra-plain for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "igw sandbox-cassandra-plain for cassandra-plain"
            },
            "vpc_id": "vpc-0846ea759e67ed8f3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08f6382b19c796885",
            "connectivity_type": "public",
            "id": "nat-051b76647b045ec6a",
            "network_interface_id": "eni-0690ca65fd23869ed",
            "private_ip": "10.0.1.106",
            "public_ip": "18.194.59.42",
            "subnet_id": "subnet-09c2e97328cf930f8",
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "NAT GW for priv subnt in pub subnet for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "NAT GW for priv subnt in pub subnet for cassandra-plain"
            }
          },
          "dependencies": [
            "aws_default_route_table.route_table",
            "aws_eip.nat_gw_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_gw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541770108352:route-table/rtb-0f36dcc1d3002d55b",
            "id": "rtb-0f36dcc1d3002d55b",
            "owner_id": "541770108352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-051b76647b045ec6a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "Route Table for NAT Gateway for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "Route Table for NAT Gateway for cassandra-plain"
            },
            "timeouts": null,
            "vpc_id": "vpc-0846ea759e67ed8f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_route_table.route_table",
            "aws_eip.nat_gw_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_gw_rt_accos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0493e81d3fb55543b",
            "route_table_id": "rtb-0f36dcc1d3002d55b",
            "subnet_id": "subnet-096986f185e231c72"
          },
          "dependencies": [
            "aws_default_route_table.route_table",
            "aws_eip.nat_gw_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.nat_gw_rt",
            "aws_subnet.priv_subnet",
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541770108352:security-group/sg-02eed52c5602eeaad",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02eed52c5602eeaad",
            "ingress": [
              {
                "cidr_blocks": [
                  "79.173.147.118/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "541770108352",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0846ea759e67ed8f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541770108352:security-group/sg-0ba4a25d64ad97a94",
            "description": "Allow all inbound traffic in internal network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba4a25d64ad97a94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all_internal",
            "name_prefix": "",
            "owner_id": "541770108352",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0846ea759e67ed8f3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541770108352:subnet/subnet-096986f185e231c72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096986f185e231c72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "541770108352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "private_subnet for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "private_subnet for cassandra-plain"
            },
            "vpc_id": "vpc-0846ea759e67ed8f3"
          },
          "dependencies": [
            "aws_subnet.pub_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541770108352:subnet/subnet-09c2e97328cf930f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c2e97328cf930f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "541770108352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "public_subnet for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "public_subnet for cassandra-plain"
            },
            "vpc_id": "vpc-0846ea759e67ed8f3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:541770108352:vpc/vpc-0846ea759e67ed8f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069c1efbf34047790",
            "default_route_table_id": "rtb-0018bcf9ebccbaf7d",
            "default_security_group_id": "sg-0f16575c879615049",
            "dhcp_options_id": "dopt-fdf80697",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0846ea759e67ed8f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0018bcf9ebccbaf7d",
            "owner_id": "541770108352",
            "tags": {
              "Env": "sandbox-cassandra-plain",
              "Name": "vpc sandbox-cassandra-plain for cassandra-plain"
            },
            "tags_all": {
              "Env": "sandbox-cassandra-plain",
              "Name": "vpc sandbox-cassandra-plain for cassandra-plain"
            }
          }
        }
      ]
    }
  ]
}